add: finish steps for initial journey for psr feature

--- a/libs/jade/dev/psr/step2.jade
+++ b/libs/jade/dev/psr/step2.jade
@@ -54,4 +54,5 @@ block content
                     option NPower
 
 
+        a.btn-light.left-button-icon(href="step2.html") Back
         a.btn.right-button-icon(href="step3.html") Continue
