--- a/libs/jade/dev/psr/step3.jade
+++ b/libs/jade/dev/psr/step3.jade
@@ -43,4 +43,5 @@ block content
                     input(name="checkbox-inline", type="checkbox")
                     | I'm deaf, hearing impaired
 
+        a.btn-light.left-button-icon(href="step2.html") Back
         a.btn.right-button-icon(href="step3a.html") Continue
