--- a/libs/jade/dev/psr/step3a.jade
+++ b/libs/jade/dev/psr/step3a.jade
@@ -47,4 +47,5 @@ block content
                     | Pension credit
 
 
+        a.btn-light.left-button-icon(href="step3.html") Back
         a.btn.right-button-icon(href="step5.html") Continue
