--- a/libs/jade/dev/psr/step5.jade
+++ b/libs/jade/dev/psr/step5.jade
@@ -31,7 +31,7 @@ block content
 
         .well--outline
             h2 Advanced notice of planned power cuts
-            p Advance notice of planned power cuts for customers who depend on their energy supply for medical reasons
+            p Advance notice of planned power cuts for customers who depend on their energy supply for medical reasons.
             fieldset
                 legend(for="radio2") Would you like advanced notice of planned power cuts?
                 label.radio.radio--inline
@@ -43,7 +43,7 @@ block content
 
         .well--outline
             h2 Priority in an emergency 
-            p This could include providing alternative heating and cooking facilities in the event of supply disconnection
+            p This could include providing alternative heating and cooking facilities in the event of supply disconnection.
             fieldset
                 legend(for="radio3") Would you like priority in an emergency?
                 label.radio.radio--inline
@@ -55,7 +55,7 @@ block content
 
         .well--outline
             h2 Password protection
-            p Provide reassurance that callers, for example meter readers, are genuine
+            p Provide reassurance that callers, for example meter readers, are genuine.
             fieldset
                 legend(for="radio4") Would you like password protection?
                 label.radio.radio--inline
@@ -67,7 +67,7 @@ block content
 
         .well--outline
             h2 Bill nominee scheme
-            p Customers can ask their supplier to send their bill to anybody (for example a family member or carer) who has agreed to receive it
+            p Customers can ask their supplier to send their bill to anybody (for example a family member or carer) who has agreed to receive it.
             fieldset
                 legend(for="radio5") Would you like to be part of the bill nominee scheme?
                 label.radio.radio--inline
@@ -79,7 +79,7 @@ block content
 
         .well--outline
             h2 Prepayment meters
-            p If a customer is unable reach to their prepayment meter they can asked for it to be moved
+            p If a customer is unable reach to their prepayment meter they can asked for it to be moved.
 
              fieldset
                 legend(for="radio6") Would you like a prepayment meter?
@@ -92,9 +92,9 @@ block content
 
         .well--outline
             h2 Quarterly meter reading services 
-            p If no person occupying the premises is able to read the meter
+            p If no person occupying the premises is able to read the meter.
             fieldset
-                legend(for="radio7") Would you like Quarterly meter reading services?
+                legend(for="radio7") Would you like quarterly meter reading services?
                 label.radio.radio--inline
                     input(name="radio7", type="radio", value="option1")
                     | Yes
@@ -104,9 +104,9 @@ block content
 
         .well--outline
             h2 Annual gas appliance safety checks for homeowners
-            p If you do not own your own home your landlord is responsible for ensuring that any gas appliances, fittings and flues are safe
+            p If you do not own your own home your landlord is responsible for ensuring that any gas appliances, fittings and flues are safe.
             fieldset
-                legend(for="radio8") Would you like Annual gas appliance safety checks?
+                legend(for="radio8") Would you like annual gas appliance safety checks?
                 label.radio.radio--inline
                     input(name="radio8", type="radio", value="option1")
                     | Yes
@@ -114,9 +114,6 @@ block content
                     input(name="radio8", type="radio", value="option2")
                     | No
 
-        fieldset
-            label.checkbox.checkbox--block 
-                input(name="checkbox", type="checkbox", value="option1")
-                | I consent to Citizens Advice sharing my details and preferences with my energy suppliers #[a.a-external-link(href="#") terms and conditions]
 
-        a.btn.right-button-icon(href="#") Continue
+        a.btn-light.left-button-icon(href="step4.html") Back
+        a.btn.right-button-icon(href="step6.html") Continue
