--- a/libs/jade/dev/psr/step7.jade
+++ b/libs/jade/dev/psr/step7.jade
@@ -15,8 +15,9 @@ block breadcrumbs
 
 block content
     .articleContent
-        h2 About you
+        h2 Emails sent
 
+        h3 What happens next
+        p We will contact these companies on your behalf. The utility companies will receive the emails and contact you directly with confirmation and when the changes will happen.
 
-        a.btn-light.left-button-icon(href="step3.html") Back
-        a.btn.right-button-icon(href="step5.html") Continue
+        p Please #[a(href="#") give us feedback] to help improve this service.
