--- a/libs/modules/local.less
+++ b/libs/modules/local.less
@@ -25,6 +25,7 @@
             text-align: right;
             list-style: none;
             margin: 0;
+            margin-top: 1rem;
             @media screen and (max-width: @breakpoint-sm) {
                 padding: 0;
             }
