--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1635,3 +1635,49 @@ div.tooltip:before {
         .col(1,2,780px);
     }
 }
+
+// Hacky template letter styles
+.tl--toggle {
+    position: absolute;
+    top: 1.1rem;
+    right: 1rem;
+    .icon;
+    cursor: pointer;
+    color: @heritage-blue;
+    &:after {
+        content: @i-up;
+    }
+    &.tl--hidden:after {
+        content: @i-down;
+    }
+}
+
+.tl--id {
+    input {
+        //border: 0;
+        padding: 0 .1rem;
+        color: @heritage-blue;
+        font-weight: @font-weight-bolder;
+        &:focus {
+            outline: 2px solid @heritage-yellow;
+        }
+    }
+}
+
+.tl--field--delete,
+.tl--option--delete {
+    color: @red;
+    font-weight: @font-weight-base;
+    position: absolute;
+    right: 3rem;
+    top: .75rem;
+    &:hover {
+        color: @red;
+        border-color: @red;
+    }
+}
+
+.tl--option--delete {
+    font-size: @font-size-small;
+    right: 1rem;
+}
