fix: Made section notice styles more logical Class now only changes on the badge, rather than the parent. This makes it easier to switch in epi as there's no need for template changes

--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -15,14 +15,9 @@
             background-color: @green-light;
             color: @text-color;
             margin-right: @box-spacing-horizontal;
-        }
-    }
-    &__changing {
-        .badge {
-            background-color: @heritage-yellow;
-        }
-        @media( max-width: @screen-xs-max ) {
-            display: none;
+            &.changing {
+                background-color: @heritage-yellow;
+            }
         }
     }
     @media( max-width: @screen-xs-max ) {
