--- a/libs/jade/features/section-notice.jade
+++ b/libs/jade/features/section-notice.jade
@@ -22,11 +22,11 @@ block section-notice
 				span.badge NEW
 				| This page is part of #[a(href="#") our new approach to digital advice].
 
-	aside.section-notice__changing
+	aside.section-notice
 		h2.screenreader Notice
 		.section-notice__content
 			p
-				span.badge SURVEY
+				span.badge.changing SURVEY
 				| Help us to improve our [section] advice. Please #[a(href="#") complete our short survey]. It'll take about 5-10 minutes.
 
 	aside.section-notice__adviser.js-make-sticky
@@ -63,19 +63,19 @@ block content
 					| &lt;/aside&gt;
 
 			.example-box-plain
-				aside.section-notice__changing
+				aside.section-notice
 					h2.screenreader Notice
 					.section-notice__content
 						p
-							span.badge SURVEY
+							span.badge.changing SURVEY
 							| Help us to improve our [section] advice. Please #[a(href="#") complete our short survey]. It'll take about 5-10 minutes.
 			pre
 				code.language-html
-					| &lt;aside class="section-notice__changing"&gt;
+					| &lt;aside class="section-notice"&gt;
 					| 	&lt;h2 class="screenreader"&gt;Notice&lt;/h2&gt;
 					| 	&lt;div class="section-notice__content"&gt;
 					| 		&lt;p&gt;
-					| 			&lt;span class="badge"&gt;SURVEY&lt;/span&gt;
+					| 			&lt;span class="badge changing"&gt;SURVEY&lt;/span&gt;
 					| 			Help us to improve our [section] advice. Please &lt;a href="#"&gt;complete our short survey&lt;/a&gt;. It'll take about 5-10 minutes.
 					| 		&lt;/p&gt;
 					| 	&lt;/div&gt;
