fix: Removed top margin from page titles, causing weird spacing in some tools

--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -72,7 +72,8 @@ h1 {
     font-size:      @font-size-h1;
     font-weight:    @font-weight-boldest;
 
-    &.title__heading {
+    &.title__heading,
+    &.page-title {
         margin-top: 0;
     }
 }
