--- a/libs/modules/local.less
+++ b/libs/modules/local.less
@@ -6,7 +6,11 @@
 
 
  #local-nav {
-    border-top: 1px solid @heritage-blue-lightest;
+    top: 0;
+    position: -webkit-sticky;
+    position: sticky;
+    z-index: 3;
+    margin: 1.5rem 0;
     .local-name {
         color: @heritage-blue;
         font-size: @font-size-medium;
@@ -17,17 +21,49 @@
     }
     .local-branding {
         background-color: @white;
-        padding: 2rem 0 1.75rem 0;
+        padding: .75rem 0;
         vertical-align: middle;
+        .nav-toggle {
+            position: absolute;
+            top: 1.75rem;
+            right: 1.5rem;
+            color: @heritage-blue;
+            cursor: pointer;
+            @media screen and (min-width: @breakpoint-sm) {
+                display: none;
+            }
+            &:after {
+                content: @i-menu;
+                .icon;
+                margin-left: .5rem;
+            }
+        }
+        .content {
+            position: relative;
+        }
+        img {
+            height: 5rem;
+            display: block;
+        }
         ul {
-            float: right;
-            display: inline-block;
+            display: none;
+            &.show {
+                display: block;
+            }
+            @media screen and (min-width: @breakpoint-sm) {
+                .vertical-align(absolute);
+                display: block !important;
+            }
+            right: .75rem;
             text-align: right;
             list-style: none;
             margin: 0;
-            margin-top: 1rem;
-            @media screen and (max-width: @breakpoint-sm) {
-                padding: 0;
+            padding: 0;
+            @media screen and (max-width: @screen-xs-max) {
+                margin-top: .5rem;
+                .btn {
+                    .btn-small;
+                }
             }
             li {
                 display: inline-block;
@@ -35,8 +71,14 @@
                 margin-top: -.25rem;
                 margin-left: 1em;
                 vertical-align: middle;
-                @media screen and (max-width: @breakpoint-sm) {
-                    margin-left: .25em;
+                @media screen and (max-width: @screen-xs-max) {
+                    display: block;
+                    padding: .25rem 0;
+                    text-align: left;
+                    margin: 0;
+                    &:last-of-type {
+                        padding-bottom: 0;
+                    }
                 }
                 a {
                     color: @heritage-blue;
@@ -50,10 +92,10 @@
                         background: none;
 
                     }
-                    @media screen and (max-width: @breakpoint-sm) {
+                    @media screen and (max-width: @breakpoint-md) {
                         margin-left: .25em;
                         margin-right: 0;
-                        font-size: 0.75rem;
+                        font-size: @font-size-small;
                     }
                 }
             }
