--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1681,3 +1681,176 @@ div.tooltip:before {
     font-size: @font-size-small;
     right: 1rem;
 }
+
+// Energy comparison styles
+.energy-comparison {
+    th {
+        font-size: @font-size-small;
+        vertical-align: bottom;
+        //font-weight: normal;
+        &.asc:after {
+            .icon;
+            content: @i-sort-asc;
+            margin-left: .25em;
+        }
+        &.desc:after {
+            .icon;
+            content: @i-sort-desc;
+            margin-left: .25em;
+        }
+    }
+    #sorttable_sortfwdind,
+    #sorttable_sortrevind {
+        display: none;
+    }
+   .sorttable_sorted:after {
+        .icon;
+        content: @i-sort-desc;
+        margin-left: .25em;
+    }
+    .sorttable_sorted_reverse:after {
+        .icon;
+        content: @i-sort-asc;
+        margin-left: .25em;
+    }
+    span.lg-only {
+        display: none;
+        @media screen and (min-width: @breakpoint-lg) {
+            display: inline;
+        }
+    }
+    // COLS
+    .col-rank {
+        width: 25%;
+        @media screen and (min-width: @breakpoint-md) {
+            width: 12%;
+        }
+        @media screen and (min-width: @breakpoint-lg) {
+            width: 8%;
+        }
+    }
+    .col-supp {
+        width: 50%;
+        @media screen and (min-width: @breakpoint-md) {
+            width: 23%;
+        }
+        @media screen and (min-width: @breakpoint-lg) {
+            width: 22%;
+        }
+    }
+    .lg-only {
+        display: none;
+        @media screen and (min-width: @breakpoint-md) {
+            display: table-cell;
+            width: 11%;
+        }
+        @media screen and (min-width: @breakpoint-lg) {
+            width: 12%;
+        }
+    }
+    .col-rate {
+        width: 25%;
+        @media screen and (min-width: @breakpoint-md) {
+            width: 10%
+        }
+        @media screen and (min-width: @breakpoint-lg) {
+            width: 10%
+        }
+    }
+}
+
+.inline-badge {
+    padding: 0 .4em;
+    border-radius: 50%;
+    background-color: @gray-7;
+    font-weight: @font-weight-bold;
+    display: inline-block;
+    width: 1.5em;
+    text-align: center;
+}
+
+
+.rating-badge {
+    display: block;
+    padding: 0 .5em;
+    border-radius: .25em;
+    color: @white;
+    font-weight: @font-weight-bold;
+    text-align: center;
+}
+
+.rate {
+    &-5 {
+        color: @green;
+        font-weight: @font-weight-bolder;
+        &--badge {
+            .rating-badge;
+            background-color: @green;
+        }
+    }
+    &-4 {
+        color: #879530;
+        font-weight: @font-weight-bolder;
+        &--badge {
+            .rating-badge;
+            background-color: #879530;
+        }
+    }
+    &-3 {
+        color: #AE8F32;
+        font-weight: @font-weight-bolder;
+        &--badge {
+            .rating-badge;
+            background-color: #AE8F32;
+        }
+    }
+    &-2 {
+        color: #C66831;
+        font-weight: @font-weight-bolder;
+        &--badge {
+            .rating-badge;
+            background-color: #C66831;
+        }
+    }
+    &-1 {
+        color: @red;
+        font-weight: @font-weight-bolder;
+        &--badge {
+            .rating-badge;
+            background-color: @red;
+        }
+    }
+}
+
+.increase {
+    font-size: @font-size-small;
+    margin-left: .25em;
+    color: @green;
+    &:before {
+        .icon;
+        margin-right: .15em;
+        content: @i-sort-asc;
+    }
+}
+
+.decrease {
+    font-size: @font-size-small;
+    margin-left: .25em;
+    color: @red;
+    &:before {
+        .icon;
+        margin-right: .15em;
+        content: @i-sort-desc;
+    }
+}
+
+.no-change {
+    font-size: @font-size-small;
+    margin-left: .25em;
+    color: @gray-5;
+    &:before {
+        .icon;
+        margin-right: .15em;
+        content: @i-minus;
+    }
+}
