--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -170,8 +170,10 @@ blockquote,
         @gray-8,
         @callout-border: @gray-6
     );
-    //.callout--border;
-    //border-radius: @form-border-radius;
+    > .well:first-child,
+    > .well--outline:first-child {
+        padding-top: @box-spacing-vertical;
+    }
 }
 .well--outline {
     .dap-panel;
@@ -179,6 +181,10 @@ blockquote,
         @white,
         @callout-border: @heritage-blue
     );
+    > .well:first-child,
+    > .well--outline:first-child {
+        padding-top: @box-spacing-vertical;
+    }
     .callout--border;
     border-radius: @form-border-radius;
     h2 {
@@ -188,8 +194,8 @@ blockquote,
     #letter {
         @media (min-width:@screen-md-min) {
             padding-left: 0;
-            margin-top: 1rem;        
-            margin-bottom: 1rem;        
+            margin-top: 1rem;
+            margin-bottom: 1rem;
         }
     }
 }
