dev:fix: Fixed the options in the left over money dropdown

--- a/libs/jade/dev/debt-calculator/debt-calculator.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator.jade
@@ -32,9 +32,8 @@ block content
 				input#field(type="number")
 				.dropdown
 					select#exampleSelect1
-						option Daily
+						option Weekly
 						option(selected) Monthly
-						option Yearly
 		h2 Debt information
 		.well
 			#debt-info
