dev:add: Added the dialog functionality to the digital lab screen

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1855,8 +1855,8 @@ div.tooltip:before {
     }
 }
 
-// hacky digital labs styles
-.digital-labs {
+// hacky digital lab styles
+.digital-lab {
     .tablet {
         display: none;
     }
@@ -1867,6 +1867,14 @@ div.tooltip:before {
         .tablet {
             display: block;
         }
+    }
+    .dialog__close {
+        position: static;
+        -webkit-transform: none;
+        -ms-transform: none;
+        transform: none;
+        float: right;
+        padding: 0;
     }
 }
 
