dev:change: Adjusted dummy content on energy comparison

--- a/libs/jade/dev/energy/comparison-1.jade
+++ b/libs/jade/dev/energy/comparison-1.jade
@@ -237,9 +237,7 @@ block content
 			li#tab5.tab(aria-controls='panel6', role='tab', aria-selected='false', tabindex='0') Customer Commitment
 		#panel1.tab-panel(aria-labelledby='tab1', role='tabpanel', aria-hidden='false')
 			h3 Overview
-			.flex-row
-				.col-md-8
-					p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor dui semper, vulputate magna ut, suscipit eros. Nunc non nunc nec ligula consequat aliquet non eu elit.
+			p Aliquam pharetra feugiat velit, sed gravida tortor consequat vel.
 			table.sortable.energy-comparison
 				thead
 					tr
