dev:change: Small wording change

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -528,7 +528,9 @@ div.tooltip:before {
     }
 }
 
-// Import style files that we don't yet want in production, but may in the future
+/***************************************************************************
+* Modules that are currently in development
+*/
 @import "modules/template-letter";
 @import "modules/energy-comparison";
 @import "modules/digital-lab";
