--- a/libs/jade/dev/debt-calculator/debt-calculator-2.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator-2.jade
@@ -19,24 +19,23 @@ block script
 	script.
 		var x = 0;
 		$('#add-debt').click(function(){
-			$('#debt-info').append('<div style="display:none;" class="well--outline"><div class="fieldset"><label for="standardField">Creditor\'s name<a class="remove-field remove u-pull-right">Remove</a></label><input id="standardField" placeholder="" type="text"></div><div class="fieldset"><label for="standardField">Total amount owed</label><input id="standardField" placeholder="" type="text"></div></div>');
-			$('#debt-info').find('.well--outline:last').slideDown('fast');
+			$('#debt-info').append('<div style="display:none;" class="well"><div class="fieldset"><label for="standardField">Creditor\'s name<a class="remove-field remove u-pull-right">Remove</a></label><input id="standardField" placeholder="" type="text"></div><div class="fieldset"><label for="standardField">Total amount owed</label><input id="standardField" placeholder="" type="text"></div></div>');
+			$('#debt-info').find('.well:last').slideDown('fast');
 			x++;
 		});
 
 block content
 	.articleContent
-		table
-			thead
-				tr
-					th(scope="col") Creditor
-					th(scope="col") Suggested repayments
-			tbody
-				tr
-					td Creditor one
-					td £XX.XX
-				tr
-					td Creditor two
-					td £XX.XX
-
-		a.btn.restart-button-icon(href="debt-calculator.html") Restart
+		#debt-info
+			.well
+				.fieldset
+					label(for="standardField") Creditor's name
+						//a.remove-field.remove.u-pull-right Remove
+					input#standardField(placeholder="", type="text")
+				.fieldset
+					label(for="standardField") Total amount owed
+					input#standardField(placeholder="", type="text")
+		button#add-debt.btn-secondary.plus-button-icon Add another debt
+		p
+		a.btn.left-button-icon(href="debt-calculator.html") Back
+		a.btn.right-button-icon(href="debt-calculator-3.html") Finish
