--- a/libs/modules/local.less
+++ b/libs/modules/local.less
@@ -10,7 +10,7 @@
     position: -webkit-sticky;
     position: sticky;
     z-index: 3;
-    margin: 1.5rem 0;
+    margin: .5rem 0 0 0;
     .local-name {
         color: @heritage-blue;
         font-size: @font-size-medium;
@@ -21,6 +21,7 @@
     }
     .local-branding {
         background-color: @white;
+        box-shadow: 0px 5px 5px rgba(90,90,90,0.2);
         padding: .75rem 0;
         vertical-align: middle;
         .nav-toggle {
