dev: move local.less to guide.less change local homepage image

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -534,3 +534,4 @@ div.tooltip:before {
 @import "modules/template-letter";
 @import "modules/energy-comparison";
 @import "modules/digital-lab";
+@import "modules/local";
