--- a/libs/jade/dev/site/local/local-home.jade
+++ b/libs/jade/dev/site/local/local-home.jade
@@ -92,8 +92,9 @@ block content
 							p #[a(href="#") Basic rights at work ]
 							p #[a(href="#") Report to Trading Standards ]
 							p #[a(href="#") Consumer ]
-					.col-md-6.col-sm-12.hide-mobile.home--feature
-						img(src="../../../images/sample-blog/man_on_phone.svg" alt="" style="width:100%;")
+					.col-md-1.col-sm-12.hide-mobile
+					.col-md-5.col-sm-12.hide-mobile
+						img(src="../../../images/kilburn-cab.jpg" class="local--feature")
 
 
 		.home-second
