dev:change: Remove buttons on debt calculator mockup now work

--- a/libs/jade/dev/debt-calculator/debt-calculator-2.jade
+++ b/libs/jade/dev/debt-calculator/debt-calculator-2.jade
@@ -23,6 +23,9 @@ block script
 			$('#debt-info').find('.well:last').slideDown('fast');
 			x++;
 		});
+		$(document).on("click", ".remove", function(){
+			$(this).parent().parent().parent().slideUp('fast');
+		});
 
 block content
 	.articleContent
