change: type.less is now directly imported into print.less Previously it was reference imported. This may be causing issues where the font and its location isnt explicitly set in the print stylesheet, causing older machines to fall back on local versions of the font. Directly importing it means the fonts location will be included in the print stylesheet

--- a/libs/print.less
+++ b/libs/print.less
@@ -13,7 +13,7 @@
 @import (reference) "base/framework";
 @import (reference) "base/icons";
 @import (reference) "base/lists";
-@import (reference) "base/type";
+@import "base/type";
 @import (reference) "base/utility";
 @import (reference) "base/helpers";
 //@import (reference) "base/simplegrid"; // Only needed in guide
