dev:add: Created 4th mockup for energy comparison

--- a/libs/modules/energy-comparison.less
+++ b/libs/modules/energy-comparison.less
@@ -51,7 +51,7 @@
             width: 23%;
         }
         @media screen and (min-width: @breakpoint-lg) {
-            width: 22%;
+            width: 20%;
         }
     }
     .data,
@@ -75,7 +75,7 @@
             width: 10%
         }
         @media screen and (min-width: @breakpoint-lg) {
-            width: 10%
+            width: 12%
         }
     }
 }
@@ -100,7 +100,7 @@
     text-align: center;
     &:after {
         content: " of 5";
-        @media screen and (max-width: @screen-sm-max) {
+        @media screen and (max-width: @breakpoint-lg) {
             display: none;
         }
     }
