dev: add about page to local mockup

--- a/libs/jade/dev/site/local/local-contact.jade
+++ b/libs/jade/dev/site/local/local-contact.jade
@@ -9,13 +9,15 @@ block local
 	header#local-nav.js-make-sticky
 		.local-branding
 			.content
-				img(src="#{dir}images/North-East-Doncaster.svg")
+				img(src="#{dir}images/local/North-East-Doncaster.svg")
 				//.local-name North East Doncaster (Thorne)
 				ul
 					li
+						a(href="local-home.html") Home
+					li
 						a News
 					li
-						a About
+						a(href="local-about.html") About
 					li
 						a Contact us
 					li
