--- a/libs/jade/dev/site/local/local-home.jade
+++ b/libs/jade/dev/site/local/local-home.jade
@@ -9,14 +9,16 @@ block local
 	header#local-nav.js-make-sticky
 		.local-branding
 			.content
-				img(src="#{dir}images/North-East-Doncaster.svg")
+				img(src="#{dir}images/local/North-East-Doncaster.svg")
 				//.local-name North East Doncaster (Thorne)
 				.nav-toggle Menu
 				ul
 					li
+						a(href="local-home.html") Home
+					li
 						a News
 					li
-						a About
+						a(href="local-about.html") About
 					li
 						a(href="local-contact.html") Contact us
 					li
@@ -94,7 +96,7 @@ block content
 							p #[a(href="#") Consumer ]
 					.col-md-1.col-sm-12.hide-mobile
 					.col-md-5.col-sm-12.hide-mobile
-						img(src="../../../images/kilburn-cab.jpg" class="local--feature")
+						img(src="../../../images/local/kilburn-cab.jpg" class="local--feature")
 
 
 		.home-second
