--- a/libs/modules/local.less
+++ b/libs/modules/local.less
@@ -108,3 +108,9 @@
     margin-top: 4rem;
     border: 7px solid #004b88;
 }
+
+// Twitter publish feature
+.timeline-Viewport {
+    height: 440px !important;
+    box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.4);
+}
