dev: update webchat example for testing

--- a/libs/jade/accessibility.jade
+++ b/libs/jade/accessibility.jade
@@ -10,7 +10,7 @@ block breadcrumbs
 		{title: "Home", href: dir + "index.html"},
 		{title: title}])
 
-block sidebar
+//block sidebar
 	include /template/sidebar-navigation.jade
 
 block content
