--- a/libs/jade/dev/site/webchat-example.jade
+++ b/libs/jade/dev/site/webchat-example.jade
@@ -25,7 +25,7 @@ html.no-js
 			
 			p Need help now?
 			p Chat on-line to one of our advisers.
-			p Confirm you're happy with our terms and conditions stating that we'll collect and store personal information you provide, but won't share it.
+			p Confirm you're happy with our #[a(href="#") terms and conditions] stating that we'll collect and store personal information you provide, but won't share it.
 			p Please click here for more information.
 
 			fieldset
