dev:add: Created a fifth version of the table to show the new modal functionality Also added a details page that contains info on how the metrics are calculated

--- a/libs/jade/dev/energy/comparison-4.jade
+++ b/libs/jade/dev/energy/comparison-4.jade
@@ -226,7 +226,12 @@ block content
 			.col-md-8
 				p Morbi porta justo sem, eget consequat purus porttitor nec. Pellentesque vitae euismod nulla, a commodo diam. Phasellus eget tincidunt nibh. Ut sem arcu, aliquam non lectus eu, faucibus viverra lacus. Vestibulum tellus turpis, sollicitudin quis efficitur id, convallis nec velit. Nulla facilisi. Cras id neque quis lacus placerat hendrerit. Etiam neque augue, eleifend sit amet fermentum at, faucibus vel odio. Morbi ac bibendum ante, ut rutrum ipsum. Ut vel finibus est.
 				p
-					button Compare energy prices
+					button.btn.right-button-icon Compare energy prices
+
+		h2 Overview
+		.flex-row
+			.col-md-8
+				p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor dui semper, vulputate magna ut, suscipit eros. Nunc non nunc nec ligula consequat aliquet non eu elit.
 
 		ul.tablist(role='tablist')
 			li#tab1.tab(aria-controls='panel1', aria-selected='true', role='tab', tabindex='0') Overview
@@ -1235,3 +1240,9 @@ block content
 						td Yes
 						td Yes
 						td.commitment-unweighted 5
+
+		h2 Methodology
+		.flex-row
+			.col-md-8
+				p Morbi porta justo sem, eget consequat purus porttitor nec. Pellentesque vitae euismod nulla, a commodo diam. Phasellus eget tincidunt nibh. Ut sem arcu, aliquam non lectus eu, faucibus viverra lacus.
+				a.blocklink(href="comparison-details.html") How we score values
