--- a/libs/jade/dev/energy/comparison-5.jade
+++ b/libs/jade/dev/energy/comparison-5.jade
@@ -1,72 +1,94 @@
 block settings
 	- var title = "Energy supplier comparison"
-	//- var sidebar = true
+	- var sidebar = true
+	- var toolbars = true
 	- var mockup = true
 	- var dir = "../../"
 
 extends /template/template.jade
 
+block sidebar
+	- var section = "Energy"
+	+sidebar([
+		{href: "comparison-5.html", title: "Energy supplier comparison"},
+		{href: "comparison-details.html", title: "How we score values"},
+		{href: "#", title: "Compare energy prices"}
+	])
+
+block breadcrumbs
+	+breadcrumbs([
+		{title: "Home", href: "#"},
+		{title: "Energy", href: "#"},
+		{title: title}])
+
 block script
 	script(src="#{dir}js/sorttable.js")
 	script.
 		$(document).ready(function() {
+			$('#openit').click(function(){
+				$('#overlay').show();
+			})
+			$('.dialog__close').click(function(){
+				$('#overlay').hide();
+			})
+
 			$(".complaints").each(function() {
 				var score = parseInt($(this).text().trim());
 				if (score >= 0 && score <= 50) {
-					$(this).addClass("rate-5");
+					$(this).addClass("rate-5").html(5);
 				} else if (score > 50 && score <= 100) {
-					$(this).addClass("rate-4");
+					$(this).addClass("rate-4").html(4);
 				} else if (score > 100 && score <= 350) {
-					$(this).addClass("rate-3");
+					$(this).addClass("rate-3").html(3);
 				} else if (score > 350 && score <= 550) {
-					$(this).addClass("rate-2");
+					$(this).addClass("rate-2").html(2);
 				} else if (score > 550) {
-					$(this).addClass("rate-1");
+					$(this).addClass("rate-1").html(1);
 				}
 			})
 
 			$(".service").each(function() {
 				var score = parseInt($(this).text().trim());
 				if (score > 0 && score <= 49) {
-					$(this).addClass("rate-1");
+					$(this).addClass("rate-1").html(1);
 				} else if (score > 50 && score <= 59) {
-					$(this).addClass("rate-2");
+					$(this).addClass("rate-2").html(2);
 				} else if (score > 60 && score <= 69) {
-					$(this).addClass("rate-3");
+					$(this).addClass("rate-3").html(3);
 				} else if (score > 70 && score <= 74) {
-					$(this).addClass("rate-4");
+					$(this).addClass("rate-4").html(4);
 				} else if (score > 74) {
-					$(this).addClass("rate-5");
+					$(this).addClass("rate-5").html(5);
 				}
 			})
 
 			$(".billing").each(function() {
 				var score = parseInt($(this).text().trim());
 				if (score > 0 && score <= 49) {
-					$(this).addClass("rate-1");
+					$(this).addClass("rate-1").html(1);
 				} else if (score > 50 && score <= 59) {
-					$(this).addClass("rate-2");
+					$(this).addClass("rate-2").html(2);
 				} else if (score > 60 && score <= 69) {
-					$(this).addClass("rate-3");
+					$(this).addClass("rate-3").html(3);
 				} else if (score > 70 && score <= 74) {
-					$(this).addClass("rate-4");
+					$(this).addClass("rate-4").html(4);
 				} else if (score > 74) {
-					$(this).addClass("rate-5");
+					$(this).addClass("rate-5").html(5);
 				}
 			})
 
 			$(".switch").each(function() {
 				var score = parseInt($(this).text().trim());
 				if (score > 0 && score <= 49) {
-					$(this).addClass("rate-1");
+					$(this).addClass("rate-1").html(1);
 				} else if (score > 50 && score <= 74) {
-					$(this).addClass("rate-2");
+					$(this).addClass("rate-2").html(2);
 				} else if (score > 74 && score <= 94) {
-					$(this).addClass("rate-3");
+					$(this).addClass("rate-3").html(3);
 				} else if (score > 94 && score <= 99) {
-					$(this).addClass("rate-4");
+					$(this).addClass("rate-4").html(4);
 				} else if (score >= 100) {
-					$(this).addClass("rate-5");
+					$(this).addClass("rate-5").html(5);
 				}
 			})
 
@@ -75,15 +97,15 @@ block script
 				if (score == 0) {
 					$(this).addClass("rate-1");
 				} else if (score > 0 && score <= 1) {
-					$(this).addClass("rate-1");
+					$(this).addClass("rate-1").html(1);
 				} else if (score > 1 && score <= 2) {
-					$(this).addClass("rate-2");
+					$(this).addClass("rate-2").html(2);
 				} else if (score > 2 && score <= 3) {
-					$(this).addClass("rate-3");
+					$(this).addClass("rate-3").html(3);
 				} else if (score > 3 && score <= 4) {
-					$(this).addClass("rate-4");
+					$(this).addClass("rate-4").html(4);
 				} else if (score > 4) {
-					$(this).addClass("rate-5");
+					$(this).addClass("rate-5").html(5);
 				}
 			})
 
@@ -105,273 +127,200 @@ block script
 
 block content
 	.articleContent
-		.flex-row
-			.col-md-8
-				p Morbi porta justo sem, eget consequat purus porttitor nec. Pellentesque vitae euismod nulla, a commodo diam. Phasellus eget tincidunt nibh. Ut sem arcu, aliquam non lectus eu, faucibus viverra lacus. Vestibulum tellus turpis, sollicitudin quis efficitur id, convallis nec velit. Nulla facilisi. Cras id neque quis lacus placerat hendrerit. Etiam neque augue, eleifend sit amet fermentum at, faucibus vel odio. Morbi ac bibendum ante, ut rutrum ipsum. Ut vel finibus est.
-				p
-					button.btn.right-button-icon Compare energy prices
-
+		p Morbi porta justo sem, eget consequat purus porttitor nec. Pellentesque vitae euismod nulla, a commodo diam. Phasellus eget tincidunt nibh.
 		h2 Overview
-		.flex-row
-			.col-md-8
-				p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor dui semper, vulputate magna ut, suscipit eros. Nunc non nunc nec ligula consequat aliquet non eu elit.
+		p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor dui semper, vulputate magna ut, suscipit eros. Nunc non nunc nec ligula consequat aliquet non eu elit.
 		table.sortable.energy-comparison
 			thead
 				tr
 					th.col-rank.sorttable_numeric(scope="col") Rank
 					th.col-supp(scope="col") Supplier
-					th.lg-only(scope="col") Complaints per 100,000 customers
-					th.lg-only(scope="col") Customers satisfied with service
-					th.lg-only(scope="col") Customers satisfied with billing
-					th.lg-only(scope="col") Proportion of switches in 21 days
-					th.lg-only(scope="col") Customer commitment
 					th.col-rate(scope="col") Rating
 			tbody
-				tr
+				tr#openit(style="cursor:pointer")
 					td.increase
 						span.inline-badge 1
 					td Supplier A
-					td.complaints 40.6
-					td.service 57.89%
-					td.billing 53.78%
-					td.switch 80.94%
-					td.commitment 4
 					td.rating
 						span 3
 				tr
 					td.increase
 						span.inline-badge 2
 					td Supplier B
-					td.complaints 70.4
-					td.service 67.89%
-					td.billing 56.8%
-					td.switch 100%
-					td.commitment 4
 					td.rating
 						span 3.25
 				tr
 					td.decrease
 						span.inline-badge 3
 					td Supplier C
-					td.complaints 140.7
-					td.service 92.67%
-					td.billing 82.34%
-					td.switch 74.68%
-					td.commitment 5
 					td.rating
 						span 4
 				tr
 					td
 						span.inline-badge 4
 					td Supplier D
-					td.complaints 35.7
-					td.service 65.01%
-					td.billing 57.86%
-					td.switch 91.35%
-					td.commitment 0
 					td.rating
 						span 3
 				tr
 					td.decrease
 						span.inline-badge 5
 					td Supplier E
-					td.complaints 80.8
-					td.service 54.67%
-					td.billing 74.67%
-					td.switch 100%
-					td.commitment 4
 					td.rating
 						span 3.5
 				tr
 					td.increase
 						span.inline-badge 6
 					td Supplier F
-					td.complaints 405.6
-					td.service 62.2%
-					td.billing 45.67%
-					td.switch 60.54%
-					td.commitment 5
 					td.rating
 						span 2.25
 				tr
 					td.decrease
 						span.inline-badge 7
 					td Supplier G
-					td.complaints 500.6
-					td.service 85.75%
-					td.billing 49.87%
-					td.switch 96.8%
-					td.commitment 0
 					td.rating
 						span 2.5
 				tr
 					td.decrease
 						span.inline-badge 8
 					td Supplier H
-					td.complaints 230.5
-					td.service 51.23%
-					td.billing 45.67%
-					td.switch 77.56%
-					td.commitment 4
 					td.rating
 						span 2.75
 				tr
 					td.decrease
 						span.inline-badge 9
 					td Supplier I
-					td.complaints 700.8
-					td.service 74.79%
-					td.billing 23.47%
-					td.switch 98.7%
-					td.commitment 0
 					td.rating
 						span 2
 				tr
 					td.decrease
 						span.inline-badge 10
 					td Supplier J
-					td.complaints 460
-					td.service 66.05%
-					td.billing 61.2%
-					td.switch 58.97%
-					td.commitment 0
 					td.rating
 						span 2.25
 				tr
 					td.increase
 						span.inline-badge 11
 					td Supplier K
-					td.complaints 90.4
-					td.service 53.3%
-					td.billing 61.5%
-					td.switch 96.34%
-					td.commitment 4
 					td.rating
 						span 3.25
 				tr
 					td.increase
 						span.inline-badge 12
 					td Supplier L
-					td.complaints 46.8
-					td.service 76.44%
-					td.billing 25.67%
-					td.switch 54.23%
-					td.commitment 4
 					td.rating
 						span 3.5
 				tr
 					td.decrease
 						span.inline-badge 13
 					td Supplier M
-					td.complaints 330.5
-					td.service 30.56%
-					td.billing 72.3%
-					td.switch 97.89%
-					td.commitment 0
 					td.rating
 						span 2.5
 				tr
 					td.increase
 						span.inline-badge 14
 					td Supplier N
-					td.complaints 111.2
-					td.service 68.79%
-					td.billing 51.64%
-					td.switch 97.4%
-					td.commitment 0
 					td.rating
 						span 2.5
 				tr
 					td.decrease
 						span.inline-badge 15
 					td Supplier O
-					td.complaints 546.9
-					td.service 42.38%
-					td.billing 80.67%
-					td.switch 82.34%
-					td.commitment 4
 					td.rating
 						span 2.75
 				tr
 					td.increase
 						span.inline-badge 16
 					td Supplier P
-					td.complaints 55.4
-					td.service 71.23%
-					td.billing 67.56%
-					td.switch 40.21%
-					td.commitment 0
 					td.rating
 						span 3.25
 				tr
 					td
 						span.inline-badge 17
 					td Supplier Q
-					td.complaints 800.7
-					td.service 72.45%
-					td.billing 76.45%
-					td.switch 30.45%
-					td.commitment 0
 					td.rating
 						span 2.75
 				tr
 					td.decrease
 						span.inline-badge 18
 					td Supplier R
-					td.complaints 340.5
-					td.service -
-					td.billing -
-					td.switch -
-					td.commitment -
 					td.rating
 						span n/a
 				tr
 					td.decrease
 						span.inline-badge 19
 					td Supplier S
-					td.complaints 375.6
-					td.service -
-					td.billing -
-					td.switch -
-					td.commitment 4
 					td.rating
 						span n/a
 				tr
 					td.decrease
 						span.inline-badge 20
 					td Supplier T
-					td.complaints 345.3
-					td.service -
-					td.billing -
-					td.switch -
-					td.commitment -
 					td.rating
 						span n/a
 				tr
 					td
 						span.inline-badge 21
 					td Supplier U
-					td.complaints 950.6
-					td.service -
-					td.billing -
-					td.switch -
-					td.commitment -
 					td.rating
 						span n/a
 				tr
 					td
 						span.inline-badge 22
 					td Supplier V
-					td.complaints -
-					td.service -
-					td.billing -
-					td.switch -
-					td.commitment 5
 					td.rating
 						span n/a
 
 		h2 Methodology
-		.flex-row
-			.col-md-8
-				p Morbi porta justo sem, eget consequat purus porttitor nec. Pellentesque vitae euismod nulla, a commodo diam. Phasellus eget tincidunt nibh. Ut sem arcu, aliquam non lectus eu, faucibus viverra lacus.
-				a.blocklink(href="comparison-details.html") How we score values
+		p Morbi porta justo sem, eget consequat purus porttitor nec. Pellentesque vitae euismod nulla, a commodo diam. Phasellus eget tincidunt nibh. Ut sem arcu, aliquam non lectus eu, faucibus viverra lacus.
+		a.blocklink(href="comparison-details.html") How we score values
+
+		#overlay.overlay(style="display:none")
+			.dialog(role="alertdialog" aria-labelledby="dialog-1-label" aria-describedby="dialog-1-main" tabindex="-1" style="z-index: 3;")
+
+				header.dialog__header
+					h2#dialog-1-label.dialog__title Supplier A
+					button.dialog__close(type="button" data-action="close")<i aria-hidden="true" class="dialog__close-icon"></i><span class="dialog__close-text">Close</span>
+
+				.dialog__main#dialog-1-main
+					table
+						tbody
+							tr
+								th(scope="row", width="40%") Complaints per 100,000 customers
+								td(width="40%") 40.6
+								td.rating(width="20%")
+									span 5
+							tr
+								th(scope="row") Customers satisfied with service
+								td 53.78%
+								td.rating
+									span 2
+							tr
+								th(scope="row") Customers satisfied with billing
+								td 40.6
+								td.rating
+									span 5
+							tr
+								th(scope="row") Proportion of switches in 21 days
+								td 80.94%
+								td.rating
+									span 3
+							tr
+								th(scope="row") Customer commitment
+								td Signed to switching guarantee#[br]Not signed to billing code
+								td.rating
+									span 4
+					a.blocklink(href="comparison-details.html") How we score values
+					h3 Contact
+					p
+						| #[strong Telephone:] 0800 0480202
+						br
+						| #[strong Email:] #[a contact@suppliera.co.uk]
+						br
+						| #[strong Web Chat:] n/a
+						br
+						| #[strong Ring backs:] n/a
+						br
+						| #[strong Mobile hotline:] n/a
+						br
+						| #[strong Minicom / Text:] 18001 0800 072 8626
+						br
