--- a/libs/jade/dev/site/local/local-home.jade
+++ b/libs/jade/dev/site/local/local-home.jade
@@ -103,22 +103,24 @@ block content
 			.home__content
 				.flex-container.flex-row
 					.col-sm-4.col-sm-12(style="padding-right: 0.5rem;")
-						.blog-lead
-							.blog-name
-								h3(style="margin-top: 0;") Volunteering roles
-						p Our volunteers come from all sorts of backgrounds and help with everything we do: fundraising, IT, administration, campaigning, trusteeship - and, of course, giving advice.
-						a.blocklink(href="#") Looking for Adviceline Telephone Assessor
-						a.blocklink(href="#") Gateway assessor
-						a.blocklink(href="#") Office admin
-						a.blocklink(href="#") Adviser
+						.cards.cards--basic
+							.blog-lead
+								.blog-name
+									h3(style="margin-top: 0;") Volunteering roles
+							p Our volunteers come from all sorts of backgrounds and help with everything we do: fundraising, IT, administration, campaigning, trusteeship - and, of course, giving advice.
+							a.blocklink(href="#") Looking for Adviceline Telephone Assessor
+							a.blocklink(href="#") Gateway assessor
+							a.blocklink(href="#") Office admin
+							a.blocklink(href="#") Adviser
 
 					.col-sm-4.col-sm-12(style="padding-right: 0.5rem;")
-						.blog-lead
-							.blog-name
-								p Latest Blog
-								h3 #[a(href="#") Payday loans: An improved market? ]
-							img(src="../../../images/sample-blog/adviser-needs.jpg" alt="Blog image" style="width:100%;")
-							p Since the Financial Conduct Authority (FCA) took over the regulation of the consumer credit sector the payday loan market has undergone a wave of changes.
+						.cards.cards--basic
+							.blog-lead
+								.blog-name
+									p Latest Blog
+									h3 #[a(href="#") Payday loans: An improved market? ]
+								img(src="../../../images/sample-blog/adviser-needs.jpg" alt="Blog image" style="width:100%;")
+								p Since the Financial Conduct Authority (FCA) took over the regulation of the consumer credit sector the payday loan market has undergone a wave of changes.
 
 					.col-sm-4.col-sm-12(style="height:400px; overflow: scroll;")
 						<a class="twitter-timeline" href="https://twitter.com/CitizensAdvice">Tweets by CitizensAdvice</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
