--- a/libs/modules/main-nav-beta.less
+++ b/libs/modules/main-nav-beta.less
@@ -4,6 +4,14 @@
     margin: 0 auto;
 }
 
+#stickynav {
+    top: 0;
+    position: -webkit-sticky;
+    position: sticky;
+    z-index: 3;
+    margin: .5rem 0 0 0;
+}
+
 #main-nav-beta {
 	// Branding bar along the top, dark blue
 	.branding {
