--- a/libs/jade/dev/energy/comparison-5.jade
+++ b/libs/jade/dev/energy/comparison-5.jade
@@ -32,83 +32,6 @@ block script
 				$('#overlay').hide();
 			})
 
-			$(".complaints").each(function() {
-				var score = parseInt($(this).text().trim());
-				if (score >= 0 && score <= 50) {
-					$(this).addClass("rate-5").html(5);
-				} else if (score > 50 && score <= 100) {
-					$(this).addClass("rate-4").html(4);
-				} else if (score > 100 && score <= 350) {
-					$(this).addClass("rate-3").html(3);
-				} else if (score > 350 && score <= 550) {
-					$(this).addClass("rate-2").html(2);
-				} else if (score > 550) {
-					$(this).addClass("rate-1").html(1);
-				}
-			})
-
-			$(".service").each(function() {
-				var score = parseInt($(this).text().trim());
-				if (score > 0 && score <= 49) {
-					$(this).addClass("rate-1").html(1);
-				} else if (score > 50 && score <= 59) {
-					$(this).addClass("rate-2").html(2);
-				} else if (score > 60 && score <= 69) {
-					$(this).addClass("rate-3").html(3);
-				} else if (score > 70 && score <= 74) {
-					$(this).addClass("rate-4").html(4);
-				} else if (score > 74) {
-					$(this).addClass("rate-5").html(5);
-				}
-			})
-
-			$(".billing").each(function() {
-				var score = parseInt($(this).text().trim());
-				if (score > 0 && score <= 49) {
-					$(this).addClass("rate-1").html(1);
-				} else if (score > 50 && score <= 59) {
-					$(this).addClass("rate-2").html(2);
-				} else if (score > 60 && score <= 69) {
-					$(this).addClass("rate-3").html(3);
-				} else if (score > 70 && score <= 74) {
-					$(this).addClass("rate-4").html(4);
-				} else if (score > 74) {
-					$(this).addClass("rate-5").html(5);
-				}
-			})
-
-			$(".switch").each(function() {
-				var score = parseInt($(this).text().trim());
-				if (score > 0 && score <= 49) {
-					$(this).addClass("rate-1").html(1);
-				} else if (score > 50 && score <= 74) {
-					$(this).addClass("rate-2").html(2);
-				} else if (score > 74 && score <= 94) {
-					$(this).addClass("rate-3").html(3);
-				} else if (score > 94 && score <= 99) {
-					$(this).addClass("rate-4").html(4);
-				} else if (score >= 100) {
-					$(this).addClass("rate-5").html(5);
-				}
-			})
-
-			$(".commitment").each(function() {
-				var score = parseInt($(this).text().trim());
-				if (score == 0) {
-					$(this).addClass("rate-1");
-				} else if (score > 0 && score <= 1) {
-					$(this).addClass("rate-1").html(1);
-				} else if (score > 1 && score <= 2) {
-					$(this).addClass("rate-2").html(2);
-				} else if (score > 2 && score <= 3) {
-					$(this).addClass("rate-3").html(3);
-				} else if (score > 3 && score <= 4) {
-					$(this).addClass("rate-4").html(4);
-				} else if (score > 4) {
-					$(this).addClass("rate-5").html(5);
-				}
-			})
-
 			$(".rating").each(function() {
 				var score = parseInt($(this).text().trim());
 				if (score > 0 && score < 2) {
@@ -123,6 +46,21 @@ block script
 					$(this).find('span').addClass("rate-5--badge");
 				}
 			})
+
+			$(".modern .rating").each(function() {
+				var score = parseInt($(this).text().trim());
+				if (score > 0 && score < 2) {
+					$(this).addClass("rate-1--cell");
+				} else if (score > 1 && score < 3) {
+					$(this).addClass("rate-2--cell");
+				} else if (score > 2 && score < 4) {
+					$(this).addClass("rate-3--cell");
+				} else if (score > 3 && score < 5) {
+					$(this).addClass("rate-4--cell");
+				} else if (score > 4 && score < 6) {
+					$(this).addClass("rate-5--cell");
+				}
+			})
 		});
 
 block content
@@ -130,7 +68,7 @@ block content
 		p Morbi porta justo sem, eget consequat purus porttitor nec. Pellentesque vitae euismod nulla, a commodo diam. Phasellus eget tincidunt nibh.
 		h2 Overview
 		p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor dui semper, vulputate magna ut, suscipit eros. Nunc non nunc nec ligula consequat aliquet non eu elit.
-		table.sortable.energy-comparison
+		table.sortable.energy-comparison.modern
 			thead
 				tr
 					th.col-rank.sorttable_numeric(scope="col") Rank
