--- a/libs/modules/energy-comparison.less
+++ b/libs/modules/energy-comparison.less
@@ -78,6 +78,61 @@
             width: 12%
         }
     }
+
+    &.modern {
+        border-collapse: separate;
+        & * {
+            border-width: 0;
+        }
+        td {
+            border-top: 4px solid @white;
+            border-bottom: 2px solid @gray-7;
+        }
+        tr {
+            &:hover {
+                cursor: pointer;
+                background-color: @gray-7;
+                .inline-badge {
+                    background-color: @white;
+                }
+            }
+        }
+        .rating span {
+            //background: none;
+        }
+        .rate {
+            &-5--cell {
+                text-align: center;
+                color: @white;
+                font-weight: @font-weight-bolder;
+                background-color: @green;
+            }
+            &-4--cell {
+                text-align: center;
+                color: @white;
+                font-weight: @font-weight-bolder;
+                background-color: #879530;
+            }
+            &-3--cell {
+                text-align: center;
+                color: @white;
+                font-weight: @font-weight-bolder;
+                background-color: #AE8F32;
+            }
+            &-2--cell {
+                text-align: center;
+                color: @white;
+                font-weight: @font-weight-bolder;
+                background-color: #C66831;
+            }
+            &-1--cell {
+                text-align: center;
+                color: @white;
+                font-weight: @font-weight-bolder;
+                background-color: @red;
+            }
+        }
+    }
 }
 
 .inline-badge {
